# QA-Agent

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  requirements.txt
src/qa_agent/: llm.py  main.py  ui.py
tests/: test_main.py
