[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qa_agent"
version = "0.1.0"
description = "An AI powered Python project for QA from given document"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Jitendra", email = "devteam@tsglobaltech.com"}
]
keywords = ["AI agent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/qa_agent"

[project.scripts]
qa_agent = "qa_agent.main:greet"

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-dir]
"" = "src"

[tool.mypy]
strict = false
ignore_missing_imports = true
